--- a/templates/base.html
+++ b/templates/base.html
@@ -6,16 +6,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Well Read</title>
+    
     <!-- Bootstrap CSS -->
  
     <!-- CSS Stylesheet -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     
+   
+    
 </head>
 <body>
-    <h1>This is the base file</h1>
+    <h1>Apple</h1>
     {% block content %}
     {% endblock %}
     <script src="{% static 'js/script.js' %}"></script>
+    
 </body>
 </html>
