create  the base template and events app

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
     
 </head>
 <body>
-    <h1>Apple</h1>
+    <h1>HEllo</h1>
     {% block content %}
     {% endblock %}
     <script src="{% static 'js/script.js' %}"></script>
