--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,7 +6,7 @@
 
     /* Colour variables */
     --background: #3f006a0f;
-    --blue: #0d6efd;
+    --blue: #2e6544;
     --black: #000;
     --off-white: #f6f6f6;
     --white: #fff;
@@ -16,6 +16,7 @@
     --smal-box-shadow: 1px -1px 7px 0 #00000061;
     --border: 1px solid #00000030;
 }
+
 
 
 html, body {
@@ -32,4 +33,23 @@ body {
 main {
     flex: 1 0 auto;
     background-color:var(--white);
+}
+
+/* Header style */
+.navbar {
+    background-color: var(--off-white);
+    box-shadow: var(--smal-box-shadow);
+}
+
+a.nav-link {
+    color: var(--black);
+}
+
+img.logo {
+    width: 18.75rem;
+}
+
+.active {
+    border-bottom: 2px solid var(--blue);
+    font-weight: 500;
 }
