--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,7 +6,7 @@
 
     /* Colour variables */
     --background: #3f006a0f;
-    --blue: #2e6544;
+    --blue: #4a3bed;
     --black: #000;
     --off-white: #f6f6f6;
     --white: #fff;
@@ -65,8 +65,17 @@ footer {
     align-items: center;
     border-top: var(--border);
 }
-
+/* Edia icon style*/
 .social-icon {
     height: 2rem;
     margin: 1rem;
+}
+
+/* Form */
+
+.form {
+    width: 100%;
+    margin: 3% auto;
+    box-shadow: var(--smal-box-shadow);
+    border-radius: 5px;
 }
