--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -2,15 +2,15 @@
 
 <footer>
    <!-- X -->
-   <a href="" target="_blank" rel="noopener" aria-label="X - Opens in new tab">
+   <a href="https://twitter.com/home" target="_blank" rel="noopener" aria-label="X - Opens in new tab">
     <img src="{% static '/icons/x-social-media-logo-icon.svg' %}" alt="X Icon" class="social-icon" />
 </a>
 <!-- instagram -->
-<a href="" target="_blank" rel="noopener" aria-label="Instagram - Opens in new tab">
+<a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Instagram - Opens in new tab">
     <img src="{% static '/icons/ig-instagram-icon.svg' %}" alt="Instagram Icon" class="social-icon" />
 </a>
 <!-- Snapchat -->
-<a href="" target="_blank" rel="noopener" aria-label="Sanapchat - Opens in new tab">
+<a href="https://www.snapchat.com/" target="_blank" rel="noopener" aria-label="Sanapchat - Opens in new tab">
     <img src="{% static '/icons/snapchat-square-color-icon.svg' %}" alt="Sanpchat Icon" class="social-icon" />
 </a>
 </footer>
