--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -7,8 +7,26 @@
 
 {% block content %}
 
-<div class="container">
-    <div class="row">
+<div class="container text-center">
+    <h1>{% trans "Sign In" %}</h1>
+  
+    <p>{% blocktrans %}If you have not created an account yet, then please
+    <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
+  
+  
+    <form class="form p-2" method="POST" action="{% url 'account_login' %}">
+      {% csrf_token %}
+      {{ form|crispy }}
+      {% if redirect_field_value %}
+      <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+      {% endif %}
+      <button class="btn btn-primary w-25 mb-2" type="submit">{% trans "Sign In" %}</button>
+      <a class="button secondaryAction d-block" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+    </form>
+  </div>
+
+<!--<div class="container text-center">
+    
         <div class="col-md-8 mt-3 offset-md-2">
             <h3>{% trans "Sign In" %}</h3>
 
@@ -18,9 +36,9 @@
                 first.{% endblocktrans %}</p>
         </div>
     </div>
-    <div class="row">
+    <div class="container text-center">
         <div class="col-md-8 mt-3 offset-md-2">
-            <form class="login" method="POST" action="{% url 'account_login' %}">
+            <form class="form p-2" method="POST" action="{% url 'account_login' %}">
                 {% csrf_token %}
                 {{ form.as_p }}
                 {% if redirect_field_value %}
@@ -30,5 +48,5 @@
             </form>
         </div>
     </div>
-</div>
+</div>-->
 {% endblock %}
