--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -5,10 +5,10 @@
 {% block title %}{% trans "Sign Up" %}{% endblock %}
 
 {% block content %}
-<div class="container">
-    <h1>{% trans "Sign Up" %}</h1>
+<div class="container ">
+    <div class="container text-center "><h1>{% trans "Sign Up" %}</h1>
   
-    <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+    <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p> </div>
   
     <form class="form p-2" id="signup_form" method="post" action="{% url 'account_signup' %}">
       {% csrf_token %}
