--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -46,8 +46,8 @@
         </ul>
         <!-- Form for search bar -->
         <form class="d-flex" role="search" >
-            <input class="form-control me-2" name="q" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-primary" type="submit">Search</button>
+            <input class="form-control me-2" name="q" type="search" placeholder="Enter book name" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
           </form>
       </div>
     </div>
