change functionality of books.views , add a new url , update error in header file

--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -26,7 +26,7 @@
           <li>
 
           <li class="nav-item">
-            <a class="nav-link {% if url_name == 'add_book' %}active{% endif %}" href="{% url 'add_book' %}">ADD A
+            <a class="nav-link {% if url_name == 'add_book' %}active{% endif %}" href="{% url 'AddBook' %}">ADD A
               BOOK</a>
           </li>
           {% if request.user.is_authenticated %}
