Add new class for vook details, Add it in urls. Update header to lauch book page

--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -21,7 +21,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link {% if url_name == 'books' %}active{% endif %}" aria-current="page"
-              href="#">BOOKS</a>
+              href="{% url 'books' %}">BOOKS</a>
           </li>
           <li>
 
