--- a/books/templates/books/books.html
+++ b/books/templates/books/books.html
@@ -1,22 +1,22 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<h1 class="text-center p-2">Latest Books</h1>
+<h1 class="text-center p-2">Books</h1>
 
-<div class="container">
+<div class="container text-center">
   <div class="row">
 
     {% for book in books %}
       <div class="col-6 col-lg-4 col-xl-3">
         <div class="card text-center product border-0 rounded-0 ">
-          <a class="books" href="{% url 'bookinfo' book.id %}" aria-label="Click to view {{books.title}}">
+          <a class="books" href="{% url 'book_detail' book.id %}" aria-label="Click to view {{books.title}}">
             <img src="{{book.image.url}}" class="card-img-top img-fluid" alt="{{book.image_alt}}">
           </a>
 
           <div class="card-body">
             <p class="card-title"><strong>{{book.title|truncatechars:20}}</strong></p>
             <p class="card-text">{{book.author}}</p>
-            <a href="{% url 'bookinfo' book.id %}" class="btn btn-sm btn-success">Read More</a>
+            <a href="{% url 'book_detail' book.id %}" class="btn btn-sm btn-success">Book Details</a>
           </div>
 
         </div>
