Add stying for buttons and logo

--- a/books/templates/books/AddBook.html
+++ b/books/templates/books/AddBook.html
@@ -12,7 +12,7 @@
                 {{ form.media }} 
                 {{ form| crispy }} 
                 <div class="text-center"> 
-                    <button type="submit" class="btn btn-lg btn-outline-success my-2">Submit</button> 
+                    <button type="submit" class="btn btn-primary w-25 my-2">Submit</button> 
                 </div> 
             </form> 
         </div>
