--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
     {% endblock %}
     
     
-    <title>Well Read {% block title %} {% endblock %} </title>
+    <title>Enchanted Library{% block title %} {% endblock %} </title>
 
 </head>
 <body>
