--- a/books/templates/books/books.html
+++ b/books/templates/books/books.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<h1 class="text-center p-2">Books</h1>
+<h1 class="text-center p-2">Available Books</h1>
 
 <div class="container text-center">
   <div class="row">
