--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -5,7 +5,7 @@
   <nav class="navbar navbar-expand-lg bg-white">
     <div class="container-fluid">
       <!-- Logo -->
-      <a class="navbar-brand d-none d-lg-block" href="" >WellRead</a>
+      <a class="navbar-brand d-none d-lg-block"  href="#"><img src="{% static 'images/logo.png' %}" class="logo"></a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
