--- a/books/templates/books/book_details.html
+++ b/books/templates/books/book_details.html
@@ -3,7 +3,7 @@
 {% block title %} Book Details - {{book.title}}{% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container text-center">
     <div class="row">
         <div class="col">
 
