Add functionality for editing

--- a/books/templates/books/book_details.html
+++ b/books/templates/books/book_details.html
@@ -25,6 +25,15 @@
                             </p>
                         </div>
                         <div>
+                            {% if request.user == book.user %}
+                            <div class="text-center my-3">
+                                <a href="{% url 'edit_book' book.id %}" class="edit_btn btn btn-success w-25">Edit</a>
+                                <a href="#" class="delete_btn btn btn-success w-25" data-bs-toggle="modal"
+                                    data-bs-target="#delete-book-{{ book.id }}">Delete</a>
+                            </div>
+                            
+                        {% endif %}
+
                         </div>
                     </div>
                 </div>
