--- a/books/templates/books/book_details.html
+++ b/books/templates/books/book_details.html
@@ -3,10 +3,15 @@
 {% block title %} Book Details - {{book.title}}{% endblock %}
 
 {% block content %}
+<!-- 
+ a card layout designed for displaying book information. 
+It consists of a container with a row containing two columns: 
+    - The first column (col-md-4) holds the book's image.
+    - The second column (col-md-8) contains details like the book's title, author, and description.
+-->
 <div class="container text-center">
     <div class="row">
         <div class="col">
-
             <div class="card">
                 <div class="row g-0">
                     <div class="col-md-4 mx-auto text-center">
@@ -17,6 +22,12 @@
                             <h5 class="card-title">{{ book.title }}</h5>
                             <p class="card-text">
                                 <strong>{{ book.author }}</strong>
+                            
+                            </p>
+                            <p class="card-text">
+                                <strong class="">
+                                    {{ book.genre}}
+                                </strong>
                             </p>
                             <p class="card-text">
                                 <small class="text-body-secondary">
@@ -34,8 +45,7 @@
                             </div>
                             
                         {% endif %}
-
-                        </div>
+                       
                     </div>
                 </div>
             </div>
