--- a/books/templates/books/book_details.html
+++ b/books/templates/books/book_details.html
@@ -4,15 +4,16 @@
 
 {% block content %}
 <!-- 
- a card layout designed for displaying book information. 
+
 It consists of a container with a row containing two columns: 
     - The first column (col-md-4) holds the book's image.
     - The second column (col-md-8) contains details like the book's title, author, and description.
 -->
+<div class="container container-with-padding"></div>
 <div class="container text-center">
     <div class="row">
         <div class="col">
-            <div class="card">
+    
                 <div class="row g-0">
                     <div class="col-md-4 mx-auto text-center">
                         <img src="{{ book.image.url }}" alt="{{ book.image_alt }}" class="img-fluid rounded-start">
@@ -53,15 +54,15 @@ It consists of a container with a row containing two columns:
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                        Are you sure you want to delete this book?
+                                        Are you sure you want to delete this Title?
                                         <br>
                                         {{ book.title }}
                                         <br>
-                                        <small>This action is permanent, and cannot be undone.</small>
+                                        <small>This change is permanent and cannot be undone.</small>
                                     </div>
                                     <div class="modal-footer">
-                                        <button type="button" class="btn btn-success" data-bs-dismiss="modal">No</button>
-                                        <a href="{% url 'delete_book' book.id %}" class="btn btn-danger">Yes</a>
+                                        <button type="button" class="btn btn-outline-warning" data-bs-dismiss="modal">No</button>
+                                        <a href="{% url 'delete_book' book.id %}" class="btn btn-outline-danger">Yes</a>
                                     </div>
                                 </div>
                             </div>
@@ -70,10 +71,11 @@ It consists of a container with a row containing two columns:
                        
                     </div>
                 </div>
-            </div>
+            
         </div>
     </div>
 
+</div>
 </div>
 
 {% endblock %}
