--- a/books/templates/books/books.html
+++ b/books/templates/books/books.html
@@ -1,29 +1,30 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+
 <h1 class="text-center p-2">Available Books</h1>
 
-<div class="container text-center">
+<div class="container">
   <div class="row">
-
     {% for book in books %}
       <div class="col-6 col-lg-4 col-xl-3">
-        <div class="card text-center product border-0 rounded-0 ">
-          <a class="books" href="{% url 'book_details' book.id %}" aria-label="Click to view {{books.title}}">
-            <img src="{{book.image.url}}" class="card-img-top img-fluid" alt="{{book.image_alt}}">
+        <div class="card mb-4 shadow-sm">
+          <a href="{% url 'book_details' book.id %}" aria-label="Click to view {{book.title}}">
+            <img src="{{book.image.url}}" class="card-img-top px-3 pt-3" alt="{{book.image_alt}}">
           </a>
-
           <div class="card-body">
-            <p class="card-title"><strong>{{book.title|truncatechars:20}}</strong></p>
-            <p class="card-text">{{book.author}}</p>
-            <a href="{% url 'book_details' book.id %}" class="btn btn-primary ">Details</a>
+            <h5 class="card-title mb-0"><strong>{{book.title|truncatechars:20}}</strong></h5>
+            <p class="card-text text-muted">{{book.author}}</p>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="btn-group">
+                <a href="{% url 'book_details' book.id %}" class="btn btn-sm btn-outline-secondary">Details</a>
+              </div>
+              <small class="text-muted">{{ book.published_date|date }}</small>
+            </div>
           </div>
-
         </div>
       </div>
     {% endfor %}
-
   </div>
 </div>
-
 {% endblock %}
