--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -22,7 +22,7 @@
          
 
           <li class="nav-item">
-            <a class="nav-link {% if url_name == 'add_book' %}active{% endif %}" href="{% url 'AddBook' %}">NEW
+            <a class="nav-link {% if url_name == 'add_book' %}active{% endif %}" href="{% url 'AddBook' %}">ADD
               </a>
           </li>
 
