--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -47,7 +47,7 @@
           {% endif %}
         </ul>
         <!-- Form for search bar -->
-        <form class="d-flex" role="search" >
+        <form class="d-flex" role="search" method="GET" action="{% url 'books' %}">
             <input class="form-control me-2" name="q" type="search" placeholder="Enter book name" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
           </form>
