--- a/books/templates/books/books.html
+++ b/books/templates/books/books.html
@@ -18,6 +18,7 @@
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
                 <a href="{% url 'book_details' book.id %}" class="btn btn-sm btn-outline-secondary">Details</a>
+                <a href="{% url 'wishlist_page' %}" class="btn btn-primary">Wishlist</a>
               </div>
               <small class="text-muted">{{ book.published_date|date }}</small>
             </div>
