--- a/books/templates/books/wishlist.html
+++ b/books/templates/books/wishlist.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-wishlist
-</body>
-</html>
+<h1>Wishlist</h1>
+<ul>
+    {% for item in wishlist_items %}
+        <li>{{ item.book.title }}</li>
+    {% endfor %}
+</ul>
