--- a/books/templates/books/wishlist.html
+++ b/books/templates/books/wishlist.html
@@ -1,6 +1,14 @@
-<h1>Wishlist</h1>
-<ul>
-    {% for item in wishlist_items %}
-        <li>{{ item.book.title }}</li>
-    {% endfor %}
-</ul>
+{% extends "base.html" %}
+{% load static %}
+{% block content %}
+
+<h1>My Wishlist</h1>
+{% for wishlist in list %}
+    <ul>
+        
+      <li>{{ wishlist.book.title }}</li>
+       
+    </ul>
+{% endfor %}
+
+{% endblock %}
