--- a/books/templates/books/book_details.html
+++ b/books/templates/books/book_details.html
@@ -40,8 +40,10 @@ It consists of a container with a row containing two columns:
                             {% if request.user == book.user %}
                             <div class="text-center my-3">
                                 <a href="{% url 'edit_book' book.id %}" class="edit_btn btn btn-primary w-25">Edit</a>
+                                <a href="{% url 'wishlist_page' %}" class="wishlist_btn btn btn-primary w-25">wishlist</a>
                                 <a href="#" class="delete_btn btn btn-primary w-25" data-bs-toggle="modal"
                                     data-bs-target="#delete-book-{{ book.id }}">Delete</a>
+
                                 
                                     
                             </div>
