--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -19,19 +19,25 @@
             <a class="nav-link {% if url_name == 'home' %}active{% endif %}" aria-current="page"
               href="{% url 'home' %}">HOME</a>
           </li>
-         
+          
           {% if request.user.is_authenticated %}
+
           <li class="nav-item">
             <a class="nav-link {% if url_name == 'books' %}active{% endif %}" aria-current="page"
               href="{% url 'books' %}">BOOKS</a>
           </li>
-          <li>
-           
-
           <li class="nav-item">
-            <a class="nav-link {% if url_name == 'add_book' %}active{% endif %}" href="{% url 'AddBook' %}">ADD
-              </a>
+            <a class="nav-link {% if url_name == 'wishlist_page' %}active{% endif %}" aria-current="page"
+              href="{% url 'wishlist_page' %}">WISHLIST</a>
           </li>
+          
+           
+             {% if user.is_staff %}
+               <li class="nav-item">
+               <a class="nav-link {% if url_name == 'add_book' %}active{% endif %}" href="{% url 'AddBook' %}">ADD
+               </a>
+               </li>
+              {% endif %}
           
           <li class="nav-item">
             <a class="nav-link {% if url_name == 'accounts_logout' %}active{% endif %}" href="/accounts/logout/">LOGOUT</a>
