Add 404.html file , Add view to update wishlist , remove href from remove from wishlist , update css for index page

--- a/books/templates/books/book_details.html
+++ b/books/templates/books/book_details.html
@@ -36,7 +36,7 @@ It consists of a container with a row containing two columns:
                             </p>
                         </div>
                         <div>
-                            <a href="#" class="wishlist_btn btn btn-primary w-25"> Add to wishlist</a>
+                           <a href="{% url 'add_to_wishlist' book.id %}" class="wishlist_btn btn btn-primary w-25"> Add to wishlist</a>
                             <!--Handling EDIT and DELETE -->
                             {% if request.user == book.user %}
                             <div class="text-center my-3">
