--- a/events/templates/events/index.html
+++ b/events/templates/events/index.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
+<div class="hero-image">
 <div class="jumbotron text-center">
   <h1 class="display-4">Welcome to the Enchanted Library!</h1>
   <p class="lead">Explore our collection of books and add them to your wishlist easily.</p>
@@ -8,5 +10,6 @@
   <p>Start your journey by browsing our selection:</p>
   
   <a href="{% url 'books' %}" class="btn btn-primary btn-lg">Browse Books</a>
+</div>
 </div>
 {% endblock %}
