--- a/events/templates/events/index.html
+++ b/events/templates/events/index.html
@@ -2,8 +2,9 @@
 
 {% block content %}
 
-<div class="hero-image">
 <div class="jumbotron text-center">
+  <!-- Image added to the jumbotron -->
+ 
   <h1 class="display-4">Welcome to the Enchanted Library!</h1>
   <p class="lead">Explore our collection of books and add them to your wishlist easily.</p>
   <hr class="my-4">
@@ -11,5 +12,5 @@
   
   <a href="{% url 'books' %}" class="btn btn-primary btn-lg">Browse Books</a>
 </div>
-</div>
+
 {% endblock %}
