Add background image and change logo

--- a/events/templates/events/index.html
+++ b/events/templates/events/index.html
@@ -2,8 +2,24 @@
 
 {% block content %}
 
+<style>
+   body {
+    background-image: url('static/images/argyle.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+        } 
+
+  .jumbotron{
+    color: rgb(235, 231, 230);
+    text-shadow: 2px 2px 4px rgba(157, 79, 53, 0.847);
+  }
+
+</style>
+
 <div class="jumbotron text-center">
-  <!-- Image added to the jumbotron -->
+  
  
   <h1 class="display-4">Welcome to the Enchanted Library!</h1>
   <p class="lead">Explore our collection of books and add them to your wishlist easily.</p>
