--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,7 +9,7 @@
     --background: #3f006a0f;
     --green: #ffbf50;
     --black: #000;
-    --off-white: #dddade;
+    --off-white: #f8dab8;
     --white: #ffffff;
     --orange: #ffbf50;
 
@@ -27,10 +27,7 @@ html, body {
 body {
     display: flex;
     flex-direction: column;
-    font-family: var(--main-font);
-
-
-    
+    font-family: var(--main-font);  
 }
 
 main {
@@ -55,7 +52,7 @@ a.nav-link {
 
 img.logo {
    
-    height: 3rem; 
+    height: 4.5rem; 
     display: block; 
     
 }
@@ -134,6 +131,8 @@ a { color:#f9af30 ; }
 .hero-text {
     text-align: center;
 }
+
+
 
 /* lead text */
 
