--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -14,7 +14,7 @@
       {% csrf_token %}
       {{ form|crispy }}
       {% if redirect_field_value %}
-      <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+      <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}">
       {% endif %}
       <button type="submit" class="btn btn-primary w-25 ">Sign Up</button>
     </form>
