--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -14,7 +14,7 @@
     <form method="post" action="{% url 'account_logout' %}">
       {% csrf_token %}
       {% if redirect_field_value %}
-      <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+      <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}">
       {% endif %}
       <button type="submit" class="btn btn-primary w-25">{% trans 'Sign Out' %}</button>
     </form>
